--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="app" fxLayout="column">
-  <div class="header">
-    header
-  </div>
+  <mat-toolbar color="primary">
+    Weather app
+  </mat-toolbar>
   <div class="main-page">
-    main-page
+    <app-weather-cards></app-weather-cards>
   </div>
 
 </div>
