--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app" fxLayout="column">
   <mat-toolbar color="primary">
-    Weather app
+    {{appTitle}}
   </mat-toolbar>
   <div class="main-page">
     <app-weather-cards></app-weather-cards>
