--- a/src/app/weather-cards/weather-cards.component.scss
+++ b/src/app/weather-cards/weather-cards.component.scss
@@ -6,4 +6,16 @@
 }
 
 .weather-card {
+
+  .current-weather-row {
+    height: 100px;
+
+    .current-weather-row__temp {
+      font-size: large;
+    }
+
+    .padding-left-2rem {
+      padding-left: 2rem;
+    }
+  }
 }
